修改主站适配子工具UI

--- a/docs/插件工具接入主站部署指示文档v2.0.md
+++ b/docs/插件工具接入主站部署指示文档v2.0.md
@@ -243,12 +243,21 @@ interface PluginUI {
   description: Record<string, string>;
   h1: Record<string, string>;
   icon: string;
-  faq: Record<string, Array<{ question: string; answer: string }>>;
+  faq: Record<string, Array<{ question: string; answer: string }>>>;
   categoryName?: Record<string, string>;
+  // 扩展字段（可选）
+  subtitle?: Record<string, string>;
+  features?: Record<string, string[]>;
+  breadcrumb?: Record<string, string>;
+  upload?: Record<string, string>;
+  actions?: Record<string, string[]>;
+  feedback?: Record<string, string>;
+  useCases?: Record<string, string[]>;
+  howTo?: Record<string, string[]>;
 }
 ```
 
-**📄 ui.json 模板（完全可用）**
+**📄 ui.json 基础模板（必填字段）**
 
 ```json
 {
@@ -275,6 +284,106 @@ interface PluginUI {
     "zh": [
       {
         "question": "这个工具免费吗？",
+        "answer": "是的,完全免费。"
+      }
+    ]
+  },
+  "categoryName": {
+    "en": "PDF Tools",
+    "zh": "PDF 工具"
+  }
+}
+```
+
+**📄 ui.json 完整模板（包含扩展字段）**
+
+```json
+{
+  "title": {
+    "en": "Split PDF Online",
+    "zh": "PDF 分割工具"
+  },
+  "description": {
+    "en": "Split PDF pages into multiple files online.",
+    "zh": "将 PDF 页面在线分割成多个文件。"
+  },
+  "subtitle": {
+    "en": "Fast, secure, and easy to use",
+    "zh": "快速、安全、易用"
+  },
+  "h1": {
+    "en": "Split Your PDF",
+    "zh": "拆分 PDF 文件"
+  },
+  "icon": "pdf-split",
+  "features": {
+    "en": [
+      "No file size limit",
+      "Batch processing supported",
+      "100% secure and private"
+    ],
+    "zh": [
+      "无文件大小限制",
+      "支持批量处理",
+      "100% 安全私密"
+    ]
+  },
+  "upload": {
+    "en": "Please upload a PDF file to split",
+    "zh": "请上传需要分割的 PDF 文件"
+  },
+  "actions": {
+    "en": [
+      "Upload your PDF file",
+      "Select page range to split",
+      "Click split button to process"
+    ],
+    "zh": [
+      "上传您的 PDF 文件",
+      "选择要分割的页面范围",
+      "点击分割按钮进行处理"
+    ]
+  },
+  "feedback": {
+    "en": "Your file will be automatically deleted after processing",
+    "zh": "处理完成后文件将自动删除"
+  },
+  "useCases": {
+    "en": [
+      "Extract specific pages from a large PDF",
+      "Split PDF for easier sharing",
+      "Separate chapters or sections"
+    ],
+    "zh": [
+      "从大型 PDF 中提取特定页面",
+      "分割 PDF 以便于分享",
+      "分离章节或部分"
+    ]
+  },
+  "howTo": {
+    "en": [
+      "Click or drag to upload your PDF file",
+      "Enter the page range you want to split (e.g., 1-5, 10-15)",
+      "Click the 'Split PDF' button",
+      "Download the split PDF files"
+    ],
+    "zh": [
+      "点击或拖拽上传您的 PDF 文件",
+      "输入要分割的页面范围（例如：1-5, 10-15）",
+      "点击"分割 PDF"按钮",
+      "下载分割后的 PDF 文件"
+    ]
+  },
+  "faq": {
+    "en": [
+      {
+        "question": "Is this tool free?",
+        "answer": "Yes, it's completely free."
+      }
+    ],
+    "zh": [
+      {
+        "question": "这个工具免费吗？",
         "answer": "是的，完全免费。"
       }
     ]
@@ -285,6 +394,18 @@ interface PluginUI {
   }
 }
 ```
+
+**扩展字段说明：**
+
+| 字段 | 类型 | 必填 | 显示位置 | 作用 |
+|------|------|------|---------|------|
+| subtitle | Record<string, string> | 否 | 标题下方 | 副标题，补充说明 |
+| features | Record<string, string[]> | 否 | 工具操作区上方 | 功能特性列表 |
+| upload | Record<string, string> | 否 | 工具操作区上方 | 上传说明提示 |
+| actions | Record<string, string[]> | 否 | 工具操作区下方 | 操作步骤说明 |
+| feedback | Record<string, string> | 否 | FAQ 上方 | 反馈信息提示 |
+| useCases | Record<string, string[]> | 否 | FAQ 下方 | 使用场景列表 |
+| howTo | Record<string, string[]> | 否 | 最下方 | 详细使用方法 |
 
 ---
 
