更新插入文件

--- a/docs/插件工具接入主站部署指示文档v2.0.md
+++ b/docs/插件工具接入主站部署指示文档v2.0.md
@@ -464,9 +464,11 @@ interface PluginSchema {
 
 ---
 
-### 10.4 前端如何渲染 PluginSchema
+### 10.4 前端如何渲染 PluginSchema 和扩展字段
 
 主站前端执行以下行为：
+
+**Schema 字段渲染（SchemaRenderer 组件）：**
 
 | schema 字段 | 前端表现 |
 |------------|---------|
@@ -474,6 +476,36 @@ interface PluginSchema {
 | options | 渲染输入框、下拉框、开关等 UI 组件 |
 | submitText | 显示提交按钮文本 |
 | outputType | 用于渲染输出结果类型（file / image / text） |
+
+**UI 扩展字段渲染（工具详情页）：**
+
+| ui.json 字段 | 渲染位置 | 样式 | 说明 |
+|-------------|---------|------|------|
+| subtitle | 标题下方 | 灰色小字 | 副标题补充说明 |
+| features | 工具操作区上方 | 蓝色背景卡片 + ✓ 图标 | 功能特性列表 |
+| upload | 工具操作区上方 | 黄色左边框提示框 | 上传说明 |
+| actions | 工具操作区下方 | 绿色背景卡片 + 有序列表 | 操作步骤 |
+| feedback | FAQ 上方 | 紫色左边框提示框 | 反馈信息 |
+| useCases | FAQ 下方 | 靛蓝色背景卡片 + 无序列表 | 使用场景 |
+| howTo | 最下方 | 青色背景卡片 + 有序列表 | 详细使用方法 |
+
+**渲染顺序（从上到下）：**
+1. 面包屑导航
+2. 工具图标 + 标题（h1）
+3. 描述（description）
+4. 副标题（subtitle）- 可选
+5. 功能特性（features）- 可选
+6. 上传说明（upload）- 可选
+7. **工具操作区（SchemaRenderer）**
+8. 操作步骤（actions）- 可选
+9. 反馈信息（feedback）- 可选
+10. 常见问题（faq）
+11. 使用场景（useCases）- 可选
+12. 使用方法（howTo）- 可选
+
+**代码位置：**
+- Schema 渲染：`frontend/main/src/components/tool/SchemaRenderer.tsx`
+- 扩展字段渲染：`frontend/main/src/app/[locale]/[categoryId]/[slug]/page.tsx`
 
 ---
 
