--- a/docs/插件工具接入主站部署指示文档v2.0.md
+++ b/docs/插件工具接入主站部署指示文档v2.0.md
@@ -243,19 +243,18 @@ interface PluginUI {
   description: Record<string, string>;
   h1: Record<string, string>;
   icon: string;
-  faq: Record<string, Array<{ question: string; answer: string }>>>;
+  faq: Record<string, Array<{ question: string; answer: string }>>;
   categoryName?: Record<string, string>;
-  // 扩展字段（可选）
-  subtitle?: Record<string, string>;
-  features?: Record<string, string[]>;
-  breadcrumb?: Record<string, string>;
-  upload?: Record<string, string>;
-  actions?: Record<string, string[]>;
-  feedback?: Record<string, string>;
-  useCases?: Record<string, string[]>;
-  howTo?: Record<string, string[]>;
+  [key: string]: any;  // 支持任意扩展字段和嵌套结构
 }
 ```
+
+**重要说明：**
+- 必填字段：`title`, `description`, `h1`, `icon`, `faq`
+- 可选字段：`categoryName`
+- **灵活扩展**：支持任意自定义字段和嵌套结构（通过 `[key: string]: any`）
+- 后端会将完整的 ui.json 传递给前端，前端可以访问所有字段
+- 扩展字段可以是简单类型、数组、嵌套对象等任意 JSON 结构
 
 **📄 ui.json 基础模板（必填字段）**
 
@@ -295,96 +294,62 @@ interface PluginUI {
 }
 ```
 
-**📄 ui.json 完整模板（包含扩展字段）**
+**📄 ui.json 扩展示例（支持复杂嵌套结构）**
+
+ui.json 支持任意复杂的嵌套结构。以下是一个实际的复杂示例：
 
 ```json
 {
   "title": {
-    "en": "Split PDF Online",
-    "zh": "PDF 分割工具"
+    "en": "Merge PDF Files",
+    "zh": "合并 PDF 文件"
   },
   "description": {
-    "en": "Split PDF pages into multiple files online.",
-    "zh": "将 PDF 页面在线分割成多个文件。"
-  },
-  "subtitle": {
-    "en": "Fast, secure, and easy to use",
-    "zh": "快速、安全、易用"
+    "en": "Combine multiple PDF files into one document instantly.",
+    "zh": "即时将多个 PDF 文件合并为一个文档。"
   },
   "h1": {
-    "en": "Split Your PDF",
-    "zh": "拆分 PDF 文件"
+    "en": "Merge PDF Files",
+    "zh": "合并 PDF 文件"
   },
-  "icon": "pdf-split",
+  "icon": "📄",
   "features": {
-    "en": [
-      "No file size limit",
-      "Batch processing supported",
-      "100% secure and private"
-    ],
-    "zh": [
-      "无文件大小限制",
-      "支持批量处理",
-      "100% 安全私密"
-    ]
+    "en": "Free, secure, and easy to use • No registration required",
+    "zh": "免费、安全、易于使用 • 无需注册"
+  },
+  "breadcrumb": {
+    "home": { "en": "Home", "zh": "首页" },
+    "pdfTools": { "en": "PDF Tools", "zh": "PDF 工具" },
+    "current": { "en": "Merge PDF", "zh": "合并 PDF" }
   },
   "upload": {
-    "en": "Please upload a PDF file to split",
-    "zh": "请上传需要分割的 PDF 文件"
-  },
-  "actions": {
-    "en": [
-      "Upload your PDF file",
-      "Select page range to split",
-      "Click split button to process"
-    ],
-    "zh": [
-      "上传您的 PDF 文件",
-      "选择要分割的页面范围",
-      "点击分割按钮进行处理"
-    ]
-  },
-  "feedback": {
-    "en": "Your file will be automatically deleted after processing",
-    "zh": "处理完成后文件将自动删除"
+    "title": { "en": "Select PDF Files", "zh": "选择 PDF 文件" },
+    "dragDrop": { "en": "or drag and drop PDF files here", "zh": "或将 PDF 文件拖放到此处" },
+    "hint": { "en": "Upload multiple PDFs to merge them into one document", "zh": "上传多个 PDF 文件以合并为一个文档" }
   },
   "useCases": {
-    "en": [
-      "Extract specific pages from a large PDF",
-      "Split PDF for easier sharing",
-      "Separate chapters or sections"
-    ],
-    "zh": [
-      "从大型 PDF 中提取特定页面",
-      "分割 PDF 以便于分享",
-      "分离章节或部分"
-    ]
-  },
-  "howTo": {
-    "en": [
-      "Click or drag to upload your PDF file",
-      "Enter the page range you want to split (e.g., 1-5, 10-15)",
-      "Click the 'Split PDF' button",
-      "Download the split PDF files"
-    ],
-    "zh": [
-      "点击或拖拽上传您的 PDF 文件",
-      "输入要分割的页面范围（例如：1-5, 10-15）",
-      "点击"分割 PDF"按钮",
-      "下载分割后的 PDF 文件"
-    ]
+    "sectionTitle": { "en": "Advanced Merge Options", "zh": "高级合并选项" },
+    "printing": {
+      "title": { "en": "Merge PDF for Printing", "zh": "合并 PDF 用于打印" },
+      "description": { "en": "Combine multiple PDF files into a single document optimized for printing.", "zh": "将多个 PDF 文件合并为一个针对打印优化的文档。" },
+      "features": {
+        "1": { "en": "Optimized for print output", "zh": "针对打印输出优化" },
+        "2": { "en": "Unified paper size and layout", "zh": "统一纸张大小和布局" }
+      },
+      "action": { "en": "Use this setting", "zh": "使用此设置" }
+    }
   },
   "faq": {
     "en": [
       {
-        "question": "Is this tool free?",
-        "answer": "Yes, it's completely free."
+        "question": "Is Merge PDF free?",
+        "answer": "Yes, this tool is completely free to use."
       }
     ],
     "zh": [
       {
-        "question": "这个工具免费吗？",
-        "answer": "是的，完全免费。"
+        "question": "合并 PDF 是免费的吗？",
+        "answer": "是的，此工具完全免费使用。"
       }
     ]
   },
@@ -396,16 +361,10 @@ interface PluginUI {
 ```
 
 **扩展字段说明：**
-
-| 字段 | 类型 | 必填 | 显示位置 | 作用 |
-|------|------|------|---------|------|
-| subtitle | Record<string, string> | 否 | 标题下方 | 副标题，补充说明 |
-| features | Record<string, string[]> | 否 | 工具操作区上方 | 功能特性列表 |
-| upload | Record<string, string> | 否 | 工具操作区上方 | 上传说明提示 |
-| actions | Record<string, string[]> | 否 | 工具操作区下方 | 操作步骤说明 |
-| feedback | Record<string, string> | 否 | FAQ 上方 | 反馈信息提示 |
-| useCases | Record<string, string[]> | 否 | FAQ 下方 | 使用场景列表 |
-| howTo | Record<string, string[]> | 否 | 最下方 | 详细使用方法 |
+- 扩展字段可以是简单的 `Record<string, string>`（如 `features`）
+- 也可以是复杂的嵌套对象（如 `breadcrumb`, `upload`, `useCases`）
+- 语言键（`en`, `zh`）可以在不同层级出现
+- 前端可以直接访问这些字段并根据需要渲染
 
 ---
 
@@ -479,15 +438,23 @@ interface PluginSchema {
 
 **UI 扩展字段渲染（工具详情页）：**
 
-| ui.json 字段 | 渲染位置 | 样式 | 说明 |
-|-------------|---------|------|------|
-| subtitle | 标题下方 | 灰色小字 | 副标题补充说明 |
-| features | 工具操作区上方 | 蓝色背景卡片 + ✓ 图标 | 功能特性列表 |
-| upload | 工具操作区上方 | 黄色左边框提示框 | 上传说明 |
-| actions | 工具操作区下方 | 绿色背景卡片 + 有序列表 | 操作步骤 |
-| feedback | FAQ 上方 | 紫色左边框提示框 | 反馈信息 |
-| useCases | FAQ 下方 | 靛蓝色背景卡片 + 无序列表 | 使用场景 |
-| howTo | 最下方 | 青色背景卡片 + 有序列表 | 详细使用方法 |
+主站前端会自动渲染 ui.json 中的所有字段。由于支持任意嵌套结构，前端需要根据实际字段结构进行相应的渲染处理。
+
+**常见扩展字段示例：**
+- `subtitle`: 副标题，显示在标题下方
+- `features`: 功能特性，可以是字符串或数组
+- `breadcrumb`: 面包屑导航，支持嵌套对象结构
+- `upload`: 上传说明，支持嵌套对象（如 title, dragDrop, hint）
+- `actions`: 操作步骤，支持嵌套对象结构
+- `feedback`: 反馈信息
+- `useCases`: 使用场景，支持复杂嵌套结构
+- `howTo`: 使用方法，支持嵌套对象结构
+- `fileList`, `result`, `footer`: 其他自定义字段
+
+**重要提示：**
+- 前端会接收完整的 ui.json 对象
+- 扩展字段的具体渲染方式由前端组件决定
+- 建议在前端实现通用的语言提取函数来处理不同层级的语言键
 
 **渲染顺序（从上到下）：**
 1. 面包屑导航
